# eeroctl

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  LICENSE  README.md  commitlint.config.js  pyproject.toml
.github/: CODEOWNERS  RENOVATE_SETUP.md  renovate.json5
.github/ISSUE_TEMPLATE/: issue_report.yml
.github/docker/: draft-fix.Dockerfile
.github/workflows/: auto-merge.yml  build-draft-fix-image.yml  ci.yml  draft-fix.lock.yml  draft-fix.md  draft-fix.yml  issue-triage.lock.yml  issue-triage.md  issue-triage.yml  metrics.yml  release.yml  renovate.yml  security.yml  sync-wiki.yml
src/eero_cli/: __init__.py  context.py  errors.py  exit_codes.py  formatting.py  main.py  output.py  safety.py  utils.py
src/eero_cli/commands/: __init__.py  activity.py  auth.py  client.py  completion.py  device.py  eero.py  network.py  profile.py  troubleshoot.py
src/eero_cli/commands/eero/: base.py  nightlight.py
src/eero_cli/commands/network/: __init__.py  advanced.py  base.py  dns.py  speedtest.py
src/eeroctl/: __init__.py  _coercion.py  const.py  context.py  formatting.py  main.py  options.py  output.py  utils.py
src/eeroctl/commands/: activity.py  auth.py  device.py  profile.py  troubleshoot.py
src/eeroctl/commands/eero/: __init__.py  base.py  led.py  nightlight.py  updates.py
src/eeroctl/commands/network/: advanced.py  backup.py  base.py  dhcp.py  dns.py  forwards.py  guest.py  security.py  speedtest.py  sqm.py
src/eeroctl/formatting/: __init__.py  base.py  device.py  eero.py  misc.py  network.py  profile.py
src/eeroctl/transformers/: __init__.py  base.py  device.py  eero.py  network.py  profile.py
tests/: __init__.py  conftest.py
tests/cli/: test_coercion.py  test_context.py  test_errors.py  test_exit_codes.py  test_main.py  test_options.py  test_output.py  test_safety.py  test_utils.py
tests/cli/commands/: __init__.py  test_activity.py  test_auth.py  test_client.py  test_completion.py  test_device.py  test_eero.py  test_network.py  test_network_mutations.py  test_profile.py  test_troubleshoot.py
wiki/: CLI-Reference.md  Configuration.md  Home.md  Legacy-Commands.md  Testing-Checklist.md  Troubleshooting.md  Usage-Examples.md
