[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eeroctl"
version = "1.2.2"
description = "Command-line interface for Eero network management"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Eero CLI Contributors"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Home Automation",
    "Topic :: System :: Networking",
    "Environment :: Console",
    "Typing :: Typed",
]
dependencies = [
    "eero-api @ git+https://github.com/fulviofreitas/eero-api.git@v1.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Repository = "https://github.com/fulviofreitas/eeroctl"
Issues = "https://github.com/fulviofreitas/eeroctl/issues"

[project.scripts]
eero = "eeroctl.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false
no_implicit_optional = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "W", "I"]
ignore = [
    "E501",  # Line too long - handled by black
    "B904",  # raise-without-from-inside-except - existing code pattern
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

# =============================================================================
# Bandit Security Scanner Configuration
# =============================================================================
# Bandit is a tool designed to find common security issues in Python code.
# https://bandit.readthedocs.io/
# =============================================================================
[tool.bandit]
# Directories to scan
targets = ["src"]
# Exclude test files from security scanning
exclude_dirs = ["tests", ".venv", "build", "dist"]
# Skip specific tests if needed (uncomment to skip)
# skips = ["B101"]  # Example: skip assert_used checks
# Confidence level: LOW, MEDIUM, HIGH
# confidence_level = "MEDIUM"
# Severity level: LOW, MEDIUM, HIGH  
# severity_level = "MEDIUM"
